k3s/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.d-kline.org`)
      kind: Rule
      services:
        - name: authentik
          port: 9000
      middlewares:
        - name: security-headers
          namespace: traefik
  tls:
    secretName: d-kline-org-tls
    namespace: traefik
